--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,12 @@
 <body>
     <main>
         <div id="game-container" tabindex="0">
+            <div id="game">
+                <div class="player-list">
+                    <h3>Jugadores:</h3>
+                    <ul id="players"></ul>
+                </div>
+            </div>
             <p>Score: <span id="score">0</span></p>
         </div>
         <div class="chat-container">
